--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Text Formatting</title>
 </head>
-<body> Hello World
+
+<body> <p>Hello World</P>
 
 
-Hello Moon
+<html><p>Hello Moon</p>
+<h1>title</h1>
+<h2>subtitle</h2>
+
 
   
   
