Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Text Formatting</title>
 </head>
 
-<body> <p>Hello World</P>
+<body> <p><em>Hello World</em></P>
 
 
 <html><p>Hello Moon</p>
