--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <html><p>Hello Moon</p>
 <h1>title</h1>
 <h2>subtitle</h2>
-
+<h3>other title</h3>
+<h4>another title</h4>
+<h5>yet another title</h5>
+<h6>you guessed it another title</h6>
 
   
   
